# audio-inspector

./: LICENSE  README.md  README_EN.md  cli.py  pyproject.toml  requirements.txt
audioinspector/: __init__.py  analysis.py  detector.py  spectrogram.py  utils.py
tests/: test_basic.py
