[project]
name = "audio-inspector"
version = "0.1.0"
description = "Audio analysis CLI tool (spectrograms, dynamic range, fake-FLAC detection)"
authors = [
  {name = "Ton Nom", email = "ton.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "numpy",
    "matplotlib",
    "scipy",
    "librosa",
]

[project.scripts]
audio-inspector = "audioinspector.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
